[package]
name = "untitled"
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide = { version = "0.17.0", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.52", features = ["rt-multi-thread", "macros"] }
urlencoding = "2"
clickhouse = { version = "0.13", features = ["chrono"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"